--- a/public/loivao/index.html
+++ b/public/loivao/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="noindex">
-  <title>Qu\u1ea3n Tr\u1ecb N\u1ed9i Dung</title>
+  <title>Quản Trị Nội Dung - Soosan Motor</title>
 </head>
 <body>
   <script src="https://unpkg.com/@sveltia/cms/dist/sveltia-cms.js" type="module"></script>
